@@ -1,3 +1,6 @@
+2011-03-31
+ Added support for Fossil revision control.
+
 2010-11-07
  Added tkdnd support. [FR 5125]
 
